# tekka

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  classes.html  classpbf_1_1_individual-members.html  classpbf_1_1_individual.html  classpbf_1_1_population-members.html  classpbf_1_1_population.html  classpbf_1_1_program-members.html  classpbf_1_1_program.html  classpbf_1_1_sub_population-members.html  classpbf_1_1_sub_population.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  group__parameters.html  index.html  main.cpp  menudata.js  structpbf_1_1_parameters-members.html  structpbf_1_1_parameters.html  topics.html
docs/: annotated.html  classes.html  classpbf_1_1_individual-members.html  classpbf_1_1_individual.html  classpbf_1_1_individual_json-members.html  classpbf_1_1_individual_json.html  classpbf_1_1_population-members.html  classpbf_1_1_population.html  classpbf_1_1_program-members.html  classpbf_1_1_program.html  classpbf_1_1_segment-members.html  classpbf_1_1_segment.html  classpbf_1_1_sub_population-members.html  classpbf_1_1_sub_population.html  classpbt_1_1_individual-members.html  classpbt_1_1_individual.html  classpbt_1_1_population-members.html  classpbt_1_1_population.html  classpbt_1_1_program-members.html  classpbt_1_1_program.html  classpbt_1_1_runif_poisson-members.html  classpbt_1_1_runif_poisson.html  classpbt_1_1_segment-members.html  classpbt_1_1_segment.html  classpbt_1_1less___segment-members.html  classpbt_1_1less___segment.html  classpcglite_1_1permuted__congruential__engine.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  group__parameters.html  group__params.html  (+31 more)
r-package/: .Rbuildignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  (+1 more)
src/: CMakeLists.txt  common.hpp  config.cpp.in  config.hpp  config.hpp.in  individual.cpp  individual.hpp  main.cpp  parameters.hpp  population.cpp  population.hpp  program.cpp  program.hpp  random.hpp  random_fwd.hpp  segment.hpp
(+14 files in other folders)
